@@ -6,6 +6,7 @@
 - Obsolete Results tab removed
 - Edit task panel implemented (still a bit experimental, use with
   caution)
+- Default sorting of Objects is now fixed
 
 0.5.1 (2016-07-28)
 - Created/Activated/Performed columns are now shown by default in
